# rogue-lang

./: .gitignore  .travis.yml  README.md  rogue.cabal  stack.yaml
app/: Main.hs
spec/: Spec.tex  rogue-lang-spec.tex
src/: RogueAST.hs  RogueCodegen.hs  RogueCompiler.hs  RogueEmitter.hs  RogueJit.hs  RogueLexer.hs  RogueParser.y  RogueRunner.hs  RogueTokens.hs
src/Rogue/: AST.hs  Codegen.hs  Compiler.hs  Emitter.hs  JIT.hs  Lexer.hs  Parser.y  Runner.hs  Tokens.hs
src/Rogue/AST/: Untyped.hs
src/Rogue/LLVM/: Codegen.hs  Emitter.hs  JIT.hs
src/Rogue/Parser/: Lexer.hs  ParserMonad.hs  SuperParser.y  Tokens.hs
src/Rogue/Validate/: Validator.hs
src/Rogue/Verify/: Verifier.hs
test/: Spec.hs  Test.hs  testProgram.rg
test/Test/Rogue/: DummySpec.hs
test/Test/Rogue/Runner/: ProcessLLVM.hs
test/Test/Rogue/Suite/: DummySpec.hs  UnpureLLVMSpec.hs
