name:                rogue
version:             0.3.1
synopsis:            Compiler of Rogue programming language
description:         Please see README.md
homepage:            https://github.com/ChShersh/rogue-lang
-- license:             BSD3
-- license-file:        LICENSE
author:              Dmitry Kovanikov
-- maintainer:          example@example.com
-- copyright:           2016 Author Here
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall 
                       -fno-warn-unused-do-bind
                       -fwarn-incomplete-patterns

  exposed-modules:     Rogue.Parser.ParserMonad
                     , Rogue.Parser.Tokens
                     , Rogue.Parser.Lexer
                     , Rogue.Parser.SuperParser

                     , Rogue.AST.Untyped
                     
                     , Rogue.LLVM.Codegen
                     , Rogue.LLVM.Emitter
                     , Rogue.LLVM.JIT

                     , Rogue.Verify.Verifier

                     , Rogue.Compiler

  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , errors
                     , filepath
                     , lens
                     , llvm-general
                     , llvm-general-pure
                     , mtl
                     , unordered-containers
  default-language:    Haskell2010

executable roguec
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall 
                       -fno-warn-unused-do-bind
                       -fwarn-incomplete-patterns
  build-depends:       base
                     , rogue
  build-tools:         happy
  default-language:    Haskell2010

test-suite rogue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rogue
                     , test-framework
                     , test-framework-hunit
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChShersh/rogue-lang
