name:                rogue
version:             0.3.2
synopsis:            Compiler of Rogue programming language
description:         Please see README.md
homepage:            https://github.com/ChShersh/rogue-lang
-- license:             BSD3
-- license-file:        LICENSE
author:              Dmitry Kovanikov
-- maintainer:          example@example.com
-- copyright:           2016 Author Here
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall

  exposed-modules:     Rogue.Parser.ParserMonad
                     , Rogue.Parser.Tokens
                     , Rogue.Parser.Lexer
                     , Rogue.Parser.SuperParser

                     , Rogue.AST.Untyped

                     , Rogue.LLVM.Codegen
                     , Rogue.LLVM.Emitter
                     , Rogue.LLVM.JIT

                     , Rogue.Verify.Verifier

                     , Rogue.Compiler

  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , errors
                     , filepath
                     , lens
                     , llvm-general
                     , llvm-general-pure
                     , mtl
                     , unordered-containers
  default-language:    Haskell2010

executable roguec
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall
  build-depends:       base >= 4.7 && < 5
                     , optparse-generic
                     , rogue
  build-tools:         happy
  default-language:    Haskell2010

test-suite rogue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Spec
                     , Test.Rogue.Runner.ProcessLLVM

                     , Test.Rogue.Suite.DummySpec
                     , Test.Rogue.Suite.UnpureLLVMSpec

  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , pipes
                     , process
                     , QuickCheck
                     , rogue
                     , tasty
                     , tasty-hunit
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/ChShersh/rogue-lang
